--- a/Day_2_session_2.html
+++ b/Day_2_session_2.html
@@ -171,7 +171,43 @@ pre code {
 </div>
 
 
+<div id="derivatives-in-r" class="section level2">
+<h2>Derivatives in R</h2>
+<pre class="r"><code>fx &lt;- expression(x^2)
 
+df_dx &lt;- D(expr = fx, name = &#39;x&#39;)
+
+df_dx</code></pre>
+<pre><code>## 2 * x</code></pre>
+<pre class="r"><code># Evaluate the slope of f(x) at x = 831
+
+x &lt;- seq(from = -10, to = 10, by = 0.5)
+
+eval(expr = df_dx)</code></pre>
+<pre><code>##  [1] -20 -19 -18 -17 -16 -15 -14 -13 -12 -11 -10  -9  -8  -7  -6  -5  -4  -3  -2
+## [20]  -1   0   1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  17
+## [39]  18  19  20</code></pre>
+<pre class="r"><code>gt &lt;- expression(3 * t ^ 2 - 4 * cos(t))
+
+dg_dt &lt;- D(expr = gt, name = &#39;t&#39;)
+
+dg_dt</code></pre>
+<pre><code>## 3 * (2 * t) + 4 * sin(t)</code></pre>
+<pre class="r"><code>gb &lt;- expression(exp(x))
+
+dg_db &lt;- D(expr = gb, name = &#39;x&#39;)
+
+dg_db</code></pre>
+<pre><code>## exp(x)</code></pre>
+<pre class="r"><code>fn &lt;- expression((n ^ 9) * 120 * n)
+
+df_dn &lt;- D(expr = fn, name = &#39;n&#39;)
+
+n &lt;- 322
+
+eval(expr = df_dn)</code></pre>
+<pre><code>## [1] 4.465644e+25</code></pre>
+</div>
 
 
 
